kubernetes/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: springboot
  ingress:
    - from:
        - podSelector: {}
